--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.mjs",
-    "dev": "nodemon app.mjs"
+    "dev": "nodemon app.mjs",
+    "ui": "browser-sync start --config bs-config.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "browser-sync": "^3.0.2",
     "nodemon": "^3.1.4"
   }
 }
