--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.mjs",
-    "dev": "nodemon app.mjs",
-    "ui": "browser-sync start --config bs-config.js"
+    "build": "parcel build public/index.html",
+    "dev": "parcel public/index.html"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,6 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "browser-sync": "^3.0.2",
     "nodemon": "^3.1.4"
   }
 }
