--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bees",
   "version": "1.0.0",
-  "main": "app.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.mjs",
@@ -16,6 +15,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "parcel": "^2.12.0"
   }
 }
